tests/bugs/glsl-layout-define.hlsl.expected
result code = -1
standard error = {
error[E30015]: undefined identifier
  ╭╼ tests/bugs/glsl-layout-define.hlsl:4:12
  │
4 │ binding = UNDEFINED_VK_BINDING,
  │           ━━━━━━━━━━━━━━━━━━━━ undefined identifier 'UNDEFINED_VK_BINDING'.
error[E30015]: undefined identifier
  ╭╼ tests/bugs/glsl-layout-define.hlsl:5:8
  │
5 │ set = UNDEFINED_VK_SET)
  │       ━━━━━━━━━━━━━━━━ undefined identifier 'UNDEFINED_VK_SET'.
error[E30015]: undefined identifier
tests/bugs/glsl-layout-define.hlsl(3): error 38000: no function found matching entry point name 'main'
layout(
^~~~~~
}
standard output = {
}
